<resources>
    <string name="app_name">HeyHealthy</string>
    <string name="start">Начать</string>
    <string name="get_ready_for">ПОДГОТОВЬТЕСЬ…</string>
    <string name="progress_bar">полоса прогресса</string>
    <string name="replay">Повторить</string>
    <string name="restart_set">Заново</string>
    <string name="pause">Пауза</string>
    <string name="pause_the_timer">Приостановить или запустить таймер</string>
    <string name="restart_the_exercise">Перезапустить упражнение</string>
    <string name="restart_the_set">Перезапустить набор</string>
    <string name="image_of_the_exercise">Изображение упражнения</string>
    <string name="play">Старт</string>
    <string name="note_press_the_play_button_to_start">Нажмите кнопку воспроизведения, чтобы начать</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="miccellenious">Комплекс</string>
    <string name="chest_day">День груди</string>
    <string name="back_day">День спины</string>
    <string name="bicep_day">День бицепса и рук</string>
    <string name="triceps_and_abs_day">День трицепсов и пресса</string>
    <string name="shoulders_day">День плеч</string>
    <string name="legs_day">День ног</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="you_have_come_this_far_n_are_you_sure_you_want_to_quite">Вы дошли так далеко,\n вы уверены, что хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="calculate_your_bmi">Рассчитайте свой ИМТ</string>
    <string name="bmi_calculator">Калькулятор ИМТ</string>
    <string name="weight_in_kg">Вес (в кг)</string>
    <string name="enter_your_weight">Введите ваш вес</string>
    <string name="height_in_cm">Рост (в см)</string>
    <string name="your_bmi_is">Ваш ИМТ:</string>
    <string name="calculate">Рассчитать</string>
    <string name="metric_units">МЕТРИЧЕСКИЕ ЕДИНИЦЫ</string>
    <string name="us_units">АМЕРИКАНСКИЕ ЕДИНИЦЫ</string>
    <string name="inch">Дюйм</string>
    <string name="feet">Фут</string>
    <string name="weight_in_pounds">Вес (в фунтах)</string>
    <string name="history">История</string>
    <string name="click_to_check_history">Нажмите, чтобы проверить историю</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="delete_set_performed_in_past">Удалить выполненный набор в прошлом</string>
    <string name="no_records_available">Нет доступных записей!</string>
    <string name="click_to_go_back_to_home">Нажмите, чтобы вернуться на главную</string>
    <string name="home">Главная</string>
    <string name="delete_progress">Удалить прогресс</string>
    <string name="delete_icon">Удалить значок</string>
    <string name="are_you_sure_you_want_to_delete_your_progress">Вы уверены, что хотите удалить свой прогресс?</string>
    <string name="exercises">Упражнения</string>
    <string name="exercise_number">Номер упражнения</string>
    <string name="add_or_remove_exercises_from_miscellaneous_set">Добавить или удалить упражнения из разных наборов</string>
    <string name="add_or_remove_exercises_from_chest_set">Добавить или удалить упражнения из набора для груди</string>
    <string name="add_or_remove_exercises_from_back_set">Добавить или удалить упражнения из набора для спины</string>
    <string name="add_or_remove_exercises_from_bicep_set">Добавить или удалить упражнения из набора для бицепса</string>
    <string name="add_or_remove_exercises_from_tricep_and_abs_set">Добавить или удалить упражнения из набора для трицепсов и пресса</string>
    <string name="add_or_remove_exercises_from_shoulder_set">Добавить или удалить упражнения из набора для плеч</string>
    <string name="add_or_remove_exercises_from_leg_set">Добавить или удалить упражнения из набора для ног</string>
    <string name="click_to_add_or_remove_exercise">Нажмите, чтобы добавить или удалить упражнение</string>
    <string name="this_will_only_happen_for_the_first_time">Это произойдет только в первый раз</string>
    <string name="this_will_happen_once_only">Это произойдет только один раз</string>

    <string name="your_question">Я твой спортивный бот, чем я могу помочь ?</string>
    <string name="chatgpt_answer">...</string>
    <string name="ask">Отправить</string>
</resources>
