<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_img"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888">

        <FrameLayout
            android:id="@+id/fLStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:elevation="10dp">

            <ImageButton
                android:id="@+id/iBStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/start"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"></TextView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fLBmiCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:elevation="10dp">

            <ImageButton
                android:id="@+id/iBBmiCalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:contentDescription="@string/calculate_your_bmi"
                tools:ignore="DuplicateSpeakableTextCheck"></ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bmi_calculator"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"></TextView>

        </FrameLayout>

        <!-- Новая кнопка -->
        <FrameLayout
            android:id="@+id/fLOtherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:elevation="10dp">

            <ImageButton
                android:id="@+id/iBOtherButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                tools:ignore="DuplicateSpeakableTextCheck">

            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="GPT-Спорт"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

        </FrameLayout>

        <!-- Конец новой кнопки -->

        <LinearLayout
            android:id="@+id/ibCheckHistory"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/ripple_history_btn"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/click_to_check_history"
                android:src="@drawable/ic_baseline_calendar_month_24"
                tools:ignore="RedundantDescriptionCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                android:text="@string/history"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
